<resources>
    <string name="app_name">Food</string>
    <string name="logo_image">logo image</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_full_name">Full name</string>
    <string name="test_name">doannd</string>
    <string name="hint_password">Password</string>
    <string name="test_password">111111</string>
    <string name="test_phone">0395616595</string>
    <string name="user_not_exist">User not exist</string>
    <string name="password_failed">Password failed</string>
    <string name="test_phone_2">0962539727</string>
    <string name="test_name_2">dangnd</string>
    <string name="phone_number_already_register">Phone number already register</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_menu">Menu</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_order">Order</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="toolbar_title">Menu</string>
    <string name="menu_intro_image_view">menu intro image view</string>
</resources>
