<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/menu_menu" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_cart" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_access_time"
            android:title="@string/menu_order" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/menu_sign_out" />

    </group>

</menu>
